--- a/circle.yml
+++ b/circle.yml
@@ -17,6 +17,6 @@ deployment:
   publish:
     owner: oneflow
     # Not a super sophisticated check, but it works with e.g. `1.0.0-alpha.1`
-    tag: /[0-9]+(\.[0-9]+)*(-.+)?/
+    tag: /v[0-9]+(\.[0-9]+)*(-.+)?/
     commands:
       - npm publish .
